--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,20 +5,22 @@
                 <h3 class="mb-0">Login</h3>
             </div>
             <div class="card-body">
-                <form class="form">
+                <form class="form" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+                    <!-- Email -->
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input [(ngModel)]="loginUserData.email" name="email" type="text"
-                            class="form-control rounded-0" required>
+                        <input [ngClass]="{'is-invalid': submited && registrationForm.get('email').errors, 
+                        'is-valid': submited && !registrationForm.get('email').errors}" type="text"
+                            class="form-control rounded-0" formControlName="email">
                     </div>
-
+                    <!-- Password -->
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input [(ngModel)]="loginUserData.password" name="password" type="password"
-                            class="form-control rounded-0" required>
+                        <input [ngClass]="{'is-invalid': submited && registrationForm.get('password').errors, 
+                        'is-valid': submited && !registrationForm.get('password').errors}" type="password"
+                            class="form-control rounded-0" formControlName="password">
                     </div>
-                    <button (click)="loginUser()" type="button"
-                        class="btn btn-success float-right mt-2">Login</button>
+                    <button type="submit" class="btn btn-success float-right mt-2">Login</button>
                 </form>
 
             </div>
