--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a href="#" class="navbar-brand">Tarchoun.tn</a>
   <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -13,10 +13,11 @@
           <a class="nav-link">A propos</a>
         </li> 
       </ul>
-      <ul class="navbar-nav ml-5">
-          <a href="#" class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-          <a href="#" class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
-          
+      
+      <ul class="navbar-nav">
+        <a href="#" class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+        <a href="#" class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+       
       </ul>
   </div>
 </nav>
