--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,8 @@
                         'is-valid': submited && !registrationForm.get('password').errors}" type="password"
                             class="form-control rounded-0" formControlName="password">
                     </div>
-                    <button type="submit" class="btn btn-success float-right mt-2">Login</button>
+                    <button type="submit" class="btn btn-success float-right mt-2">Sign in</button>
+                    
                 </form>
 
             </div>
