--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,8 @@
+
+<app-navbar></app-navbar>
+
 <div class="container">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a href="#" class="navbar-brand">Tarchoun.tn</a>
-  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-      <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link">Acceuil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">A propos</a>
-        </li> 
-      </ul>
-      
-      <ul class="navbar-nav">
-        <a href="#" class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-        <a href="#" class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
-       
-      </ul>
-  </div>
-</nav>
+      <router-outlet></router-outlet>
 </div>
-<div class="container">
-<router-outlet></router-outlet>
-</div>
+
+<app-footer></app-footer>
