--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,58 @@
-<p>dashboard works!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    
+    <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  </head>
+  <body>
+    <div class="container">
+      <div id="demo" class="carousel slide" data-ride="carousel">
+        <!-- Indicateurs -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- Carrousel -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="Carrousel slide 1" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>Titre de la légende</h4>
+              <p>Légende de la slide n°1.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-2.jpg" alt="Carrousel slide 2" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block text-dark">
+              <h4>Titre de la légende</h4>
+              <p>Légende de la slide n°2.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-3.jpg"
+            alt="Carrousel slide 3" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>Titre de la légende</h4>
+              <p>Légende de la slide n°3.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Contrôles -->
+        <a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Précédent</span>
+        </a>
+        <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Suivant</span>
+        </a>
+      </div>
+    </div>
+  </body>
+</html>
+  
+  
