--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,10 +11,16 @@
             </li>
             <li class="nav-item">
               <a class="nav-link">A propos</a>
-            </li> 
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerlink="/Dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerlink="/users">List Users</a>
+            </li>
           </ul>
       </div>
-      <form class="form-inline my-2 my-lg-0 d-inline">        
+      <form class="form-inline my-2 my-lg-0">        
         <a class="nav-link" routerLink="/login" routerLinkActive="active" class="btn btn-success mr-sm-2">Login</a>
         <a class="nav-link" routerLink="/register" routerLinkActive="active" class="btn btn-success ml-2">Register</a>
       </form>
