--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -18,7 +18,7 @@
             <td>{{user.name}}</td>
             <td>{{user.lastname}}</td>
             <button (click)="deleteUser(user.id)" type="button" class="btn btn-danger mt-1 mx-2">delete</button>
-            <button type="button" class="btn btn-info mt-1 mx-5">Update</button>
+            <button type="button" class="btn btn-info mt-1 mx-5" (click)="updateUser()">Update</button>
         </tr>
     </tbody>
 </table>
