--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -1,1 +1,34 @@
-<p>user-add works!</p>
+<form class="mt-4">
+    <!-- email -->
+    <div class="form-group row">
+        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        </div>
+    </div>
+  <br>
+    <!-- password -->
+    <div class="form-group row">
+        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+        </div>
+    </div>
+<br>
+    <!-- name -->
+    <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+            <input type="name" class="form-control" id="name" placeholder="name">
+        </div>
+    </div>
+<br>
+    <!-- lastname -->
+    <div class="form-group row">
+        <label for="lastname" class="col-sm-2 col-form-label">Lastame</label>
+        <div class="col-sm-10">
+            <input type="lastname" class="form-control" id="lastname" placeholder="lastname">
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary mt-4">AddUser</button>
+</form>
