loginregister-Authservice-angular

--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -30,5 +30,5 @@
             <input type="lastname" class="form-control" id="lastname" placeholder="lastname">
         </div>
     </div>
-    <button type="button" class="btn btn-primary mt-4">AddUser</button>
+    <button type="button" class="btn btn-danger mt-4">AddUser</button>
 </form>
