--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -1,4 +1,5 @@
-<table class="table mt-3">
+<button  type="button" class="btn btn-warning mt-2" (click)="addUser()">Add User</button>
+<table class="table mt-2">
     <thead>
         <tr>
             <th scope="col">Id</th>
