loginregister-Authservice-angular

--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -1,4 +1,4 @@
-<button  type="button" class="btn btn-warning mt-2" (click)="addUser()">Add User</button>
+<button  type="button" class="btn btn-warning mt-2" (click)="AddUser()">Add User</button>
 <table class="table mt-2">
     <thead>
         <tr>
